--- a/HTML Basics/Ex8.html
+++ b/HTML Basics/Ex8.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>EXercise 8</title>
 </head>
 <body>
 	<a href="#botoom" id="top">go to bottom</a>
