--- a/HTML Basics/Ex2.html
+++ b/HTML Basics/Ex2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Exercise #2</title>
+	<title>Exercise 2</title>
 </head>
 <body>
 	<h1>My First Heading</h1>
