--- a/HTML Basics/Final_Ex.html
+++ b/HTML Basics/Final_Ex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Final_Exercise</title>
 </head>
 <body>
 	<header><h1>My favorite YouTube videos</h1></header>
@@ -15,7 +15,7 @@
 	<main>
 		<article>
 			<h2>Tom&Jerry</h2>
-<iframe src='https://www.youtube.com/embed/IFncZA5k_1k' frameborder='1' width="500px" height="500px"></iframe></div>
+<iframe  src='https://www.youtube.com/embed/IFncZA5k_1k' frameborder='1' width="500px" height="500px"></iframe></div>
 		</article>
 
 		<article><h2>Shud And Ship</h2>
